tests/miniJava/neg/006643_mutation.MiniJava
class java { public static void Main Main String [ ] java ) { { } } }
